CIV-10563 Add confirmation message